[package]
name = "atsamd09d14a"
version = "0.1.0"
authors = ["jonwingfield <wingfield.jon@gmail.com>"]

[lib]
name = "atsamd09d14a"
path = "lib.rs"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.5.0"

[features]
rt = ["cortex-m-rt/device"]
